--- a/pada.conf
+++ b/pada.conf
@@ -1,7 +1,7 @@
 {
   "global": {
     "aligned_path": "./output",
-    "predictor_path": "/home/mint/Other/Projects/Videos/SelfieADay/shape_predictor_68_face_landmarks.dat",
+    "predictor_path": "./shape_predictor_68_face_landmarks.dat",
     "filtered_files": "filtered.txt",
     "aligned_extension": "jpg"
   },
