--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ verify_ssl = true
 opencv-python = "*"
 scipy = "*"
 dlib = "*"
+exifread = "*"
+python-resize-image = "*"
 
 [requires]
 python_version = "3.6"
