--- a/pada.conf
+++ b/pada.conf
@@ -7,7 +7,8 @@
   },
   "align": {
     "input_glob": "./input/*.jpg",
-    "img_thresh": 0.0
+    "img_thresh": 0.0,
+    "single_image": "./me.jpg"
   },
   "framedrop": {
     "erode_amount": 51,
